--- a/web_study/day02/pom.xml
+++ b/web_study/day02/pom.xml
@@ -6,7 +6,6 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - day02</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.complier.source>20</maven.complier.source>
@@ -19,6 +18,21 @@
       <version>1.18.30</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
