--- a/web_study/day04/src/main/webapp/WEB-INF/web.xml
+++ b/web_study/day04/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,34 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
                       https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+
+    <context-param>
+        <param-name>common1</param-name>
+        <param-value>value1</param-value>
+    </context-param>
+    <context-param>
+        <param-name>common2</param-name>
+        <param-value>value2</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>hello-servlet</servlet-name>
         <servlet-class>servlets.HelloServlet</servlet-class>
+        <init-param>
+            <param-name>key1</param-name>
+            <param-value>value1</param-value>
+        </init-param>
+        <init-param>
+            <param-name>key2</param-name>
+            <param-value>value2</param-value>
+        </init-param>
     </servlet>
     <servlet-mapping>
         <servlet-name>hello-servlet</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 
+    <!--
     <servlet>
         <servlet-name>board-servlet</servlet-name>
         <servlet-class>servlets.BoardServlet</servlet-class>
@@ -21,5 +40,23 @@
     <servlet-mapping>
         <servlet-name>board-servlet</servlet-name>
         <url-pattern>/board</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
+
+    <filter>
+        <filter-name>filter-ex1</filter-name>
+        <filter-class>filters.FilterEx1</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filter-ex1</filter-name>
+        <url-pattern>/board</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>filter-ex2</filter-name>
+        <filter-class>filters.FilterEx2</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filter-ex2</filter-name>
+        <url-pattern>/board</url-pattern>
+    </filter-mapping>
 </web-app>
