--- a/web_study/day04/src/main/webapp/WEB-INF/web.xml
+++ b/web_study/day04/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,7 @@
         <url-pattern>/board</url-pattern>
     </servlet-mapping>-->
 
+    <!--
     <filter>
         <filter-name>filter-ex1</filter-name>
         <filter-class>filters.FilterEx1</filter-class>
@@ -58,5 +59,15 @@
     <filter-mapping>
         <filter-name>filter-ex2</filter-name>
         <url-pattern>/board</url-pattern>
+    </filter-mapping>
+    -->
+
+    <filter>
+        <filter-name>common-filter</filter-name>
+        <filter-class>filters.CommonFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>common-filter</filter-name>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 </web-app>
